--- a/picker.html
+++ b/picker.html
@@ -42,7 +42,7 @@
       </div>
     </div>
   </body>
-  <script src="./picker.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/dxmari/antd-js-datepicker@main/picker.js"></script>
   <script>
     AntdJSPicker.init(".picker");
   </script>
