landing page added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </div>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/gh/dxmari/antd-js-datepicker@main/picker.js"></script>
+  <script src="picker.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/dxmari/antd-js-datepicker@main/picker.js"></script> -->
   <script>
     AntdJSPicker.init(".picker");
   </script>
