landing page added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       /* Section Styles */
       .section {
         margin-bottom: 40px;
-        padding: 20px;
+        padding: 10px 40px 20px 40px;
         background-color: #fff;
         border-radius: 12px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -52,7 +52,8 @@
       .section h2 {
         font-size: 2rem;
         color: #4caf50;
-        margin-bottom: 15px;
+        margin-top: 20px;
+        margin-bottom: 24px;
         text-align: center;
       }
 
@@ -185,7 +186,7 @@
         }
       }
     </style>
-    <script src="https://cdn.jsdelivr.net/gh/dxmari/antd-js-datepicker@main/picker.js"></script>
+    <script src="https://dxmari.github.io/antd-js-datepicker/picker.js"></script>
   </head>
   <body>
     <header>
@@ -217,7 +218,7 @@
       <!-- Demo Section -->
       <div class="section demo">
         <h2>Live Demo</h2>
-        <div class="container">
+        <div class="container-block">
           <div class="input-list">
             <div class="input-block">
               <label>Time - Default</label>
@@ -239,6 +240,10 @@
       <div class="section usage">
         <h2>How to Use</h2>
         <h3>Usage:</h3>
+        <h4>Include the script:</h4>
+        <pre>
+&lt;script src="https://dxmari.github.io/antd-js-datepicker/picker.js"&gt;&lt;/script&gt;
+        </pre>
         <h4>1. Add the TimePicker Component</h4>
         <pre>
       &lt;div class="container"&gt
